[gd_scene load_steps=3 format=3 uid="uid://dc5c80uujrpwr"]

[ext_resource type="Script" path="res://scripts/sewing_string.gd" id="1_7r74v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g05oc"]
size = Vector2(30.725, 3)

[node name="SewingString" type="Line2D"]
z_index = -10
points = PackedVector2Array(0, 0, 10, 10)
width = 3.0
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("1_7r74v")

[node name="Area2D" type="Area2D" parent="."]
z_index = 100
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_g05oc")

[node name="StringJoint" type="DampedSpringJoint2D" parent="."]
disable_collision = false
stiffness = 64.0
damping = 0.7

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
